--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,32 @@
-.App {
-  text-align: center;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@font-face {
+  font-family: SoraMedium;
+  src: url(./Assets/fonts/Sora-Medium.ttf);
+}
+@font-face {
+  font-family: SoraRegular;
+  src: url(./Assets/fonts/Sora-Regular.ttf);
+}
+h1{
+  font-family: SoraMedium;
+}
+#root{
+  font-family: SoraRegular;
+  background-image: url(./Assets/Image/Blurry\ Background-min.jpg);
+  background-size: 100vw;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+}
+.hide-scrollbar::-webkit-scrollbar {
+  width: 0.5rem;
+  background-color: transparent;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.hide-scrollbar::-webkit-scrollbar-thumb {
+  background-color: transparent;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
